[package]
name = "shader_transformer"
version = "0.1.0"
authors = ["Ops Fox <opsfox245@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shaderc = "0.7"
#wgpu = "0.8.*"
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"